# CPP-study

./: .gitignore
00 – Namespace, std, class, etc/00 – Megaphone/: megaphone.cpp
00 – Namespace, std, class, etc/01 – My Awesome PhoneBook/: Attribute.h  Contact.h  PhoneBook.cpp
01 – Memory allocation, pointers/00 – BraiinnzZ/: Zombie.hpp  newZombie.cpp  randomChump.cpp
01 – Memory allocation, pointers/01 – Moar brainz!/: ZombieHorde.cpp
01 – Memory allocation, pointers/02 – HI THIS IS BRAIN/: main.cpp
01 – Memory allocation, pointers/03 – Unnecessary violence/: HumanA.cpp  HumanA.hpp  HumanB.cpp  Weapon.cpp  main.cpp
01 – Memory allocation, pointers/04 – Sed is for losers/: main.cpp
01 – Memory allocation, pointers/05 – Karen 2.0/: Karen.cpp  Makefile  main.cpp
01 – Memory allocation, pointers/06 – Karen-filter/: Karen.hpp
02 – Polymorphism/00 – My First Orthodox Class/: Fixed.cpp  main.cpp
02 – Polymorphism/01 – Towards a more usefulfixed point class/: Makefile  main.cpp
02 – Polymorphism/02 – Now we’re talking/: Fixed.hpp
02 – Polymorphism/03 – BSP/: Fixed.cpp  Makefile  Point.cpp  main.cpp
03 – Inheritance/01 – Serena, my love!/: ClapTrap.hpp  ScavTrap.cpp  ScavTrap.hpp
03 – Inheritance/03 – Now it’s weird!/: ClapTrap.hpp  DiamondTrap.cpp  (+1 more)
CPP-Module00/: CMakeLists.txt
CPP-Module00/00 – Megaphone/: Makefile  megaphone
CPP-Module00/01 – My Awesome PhoneBook/: Attribute.cpp  Contact.cpp  Contact.h  Makefile  PhoneBook.cpp  PhoneBook.h  main.cpp  phonebook
CPP-Module00/02 – The Job Of Your Dreams/: Account.cpp  Makefile  tests.cpp
(+149 files in other folders)
