cmake_minimum_required(VERSION 3.19)
project(CPP_Module00)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP_Module00
        "00 – Megaphone/megaphone.cpp" "01 – My Awesome PhoneBook/Contact.cpp" "01 – My Awesome PhoneBook/Contact.h" "01 – My Awesome PhoneBook/PhoneBook.cpp" "01 – My Awesome PhoneBook/PhoneBook.h" "01 – My Awesome PhoneBook/Attribute.cpp" "01 – My Awesome PhoneBook/Attribute.h" "01 – My Awesome PhoneBook/main.cpp")
